--- a/src/app/fcomponents/basic/navbar/navbar.component.html
+++ b/src/app/fcomponents/basic/navbar/navbar.component.html
@@ -3,13 +3,13 @@
     <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item pl-md-5">
-                <a class="nav-link s2bold" routerLink='/hire' routerLinkActive="active">Hire</a>
+                <a class="nav-link s2bold" routerLink='/hire' routerLinkActive="active"><h1 class="s2bold">Hire</h1></a>
             </li>
             <li class="nav-item pl-md-5">
-                <a class="nav-link s2bold" routerLink='/services' routerLinkActive="active">Party Services</a>
+                <a class="nav-link s2bold" routerLink='/services' routerLinkActive="active"><h1 class="s2bold">Party Services</h1></a>
             </li>
             <li class="nav-item pl-md-5">
-                <a class="nav-link s2bold" routerLink='/packages' routerLinkActive="active">Party Packages</a>
+                <a class="nav-link " routerLink='/packages' routerLinkActive="active"><h1 class="s2bold">Party Packages</h1></a>
             </li>
         </ul>
     </div>
@@ -25,16 +25,16 @@
     <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item pr-md-5">
-                <a class="nav-link s2bold" routerLink ='/galleries' routerLinkActive="active">Gallery</a>
+                <a class="nav-link s2bold" routerLink ='/galleries' routerLinkActive="active"><h1 class="s2bold">Gallery</h1></a>
             </li>
             <li class="nav-item pr-md-5">
-                <a class="nav-link s2bold" routerLink ='/aboutUs' routerLinkActive="active">About us</a>
+                <a class="nav-link s2bold" routerLink ='/aboutUs' routerLinkActive="active"><h1 class="s2bold">About us</h1></a>
             </li>
             <li class="nav-item pr-md-5">
-                <a class="nav-link s2bold" routerLink ='/faq' routerLinkActive="active">FAQ</a>
+                <a class="nav-link s2bold" routerLink ='/faq' routerLinkActive="active"><h1 class="s2bold">FAQ</h1></a>
             </li>
             <li class="nav-item pr-md-5">
-                <a class="nav-link s2bold" routerLink='/contactUs' routerLinkActive="active">Contact Us</a>
+                <a class="nav-link s2bold" routerLink='/contactUs' routerLinkActive="active"><h1 class="s2bold">Contact Us</h1></a>
             </li>
         </ul>
     </div>
