--- a/src/app/fcomponents/pages/homepage/homepage.component.html
+++ b/src/app/fcomponents/pages/homepage/homepage.component.html
@@ -79,7 +79,7 @@
       <div class="row">
           <div class="col-12 col-md-6" style="height:550px;">
             <!-- <img src="../../../../assets/images/cebb995345f82a73cd0fea85a7bc899c.jpg"class=" d-block ml-auto " style="position: absolute;clip: rect(0px,auto,500px,0px);"> -->
-            <img src="../../../../assets/images/homep8.jpg"style="height:100%;width:100%;"/>
+            <img src="../../../../assets/images/465b91cc5e0f427019fb4363fe65023d.jpg"style="height:100%;width:100%;"/>
             </div>
           <div class="col-12 col-md-6">
             <div class="d-none d-md-block"><br><br></div>
@@ -106,7 +106,7 @@
             </div>
             <!-- <div class="col-12 col-md-6"><img src="../../../../assets/images/5da0c82500e7be45dc17d023ea7e2c83.jpg "class=" d-block ml-auto " style="position: absolute;
               clip: rect(0px,auto,500px,0px);"></div> -->
-              <div class="col-12 col-md-6 order-0 order-md-1" style="height:550px;"><img src="../../../../assets/images/homep9.jpg " style="height:100%;width:100%;"></div>
+              <div class="col-12 col-md-6 order-0 order-md-1" style="height:550px;"><img src="../../../../assets/images/5da0c82500e7be45dc17d023ea7e2c83.jpg " style="height:100%;width:100%;"></div>
           </div>
       </div>
 
