--- a/src/app/fcomponents/basic/navbar/navbar.component.html
+++ b/src/app/fcomponents/basic/navbar/navbar.component.html
@@ -33,8 +33,14 @@
             <li class="nav-item pr-md-5">
                 <a class="nav-link s2bold" routerLink ='/faq' routerLinkActive="active"><h1 class="s2bold">FAQ</h1></a>
             </li>
-            <li class="nav-item pr-md-5">
+            <li class="nav-item pr-md-3">
                 <a class="nav-link s2bold" routerLink='/contactUs' routerLinkActive="active"><h1 class="s2bold">Contact Us</h1></a>
+            </li>
+            <li class="nav-item ">
+                    <a class="nav-link s2bold" routerLink='/shoppingCart' routerLinkActive="active">
+                        <h1 class="s2bold"><i class="fas fa-shopping-cart" title="View Shopping Cart" ></i>
+                        </h1>
+                    </a>
             </li>
         </ul>
     </div>
