--- a/src/app/fcomponents/pages/homepage/homepage.component.html
+++ b/src/app/fcomponents/pages/homepage/homepage.component.html
@@ -113,8 +113,8 @@
         <!-- scrolling background -->
         <div class="row">
         <div class="col-12 bgat mt-5" #bgat >
-            <div id="carouselExampleSlidesOnly" class="carousel slide" style="height:300px;" data-ride="carousel">
-                <div class="container carousel-inner text-center text-white"><br><br><br>
+            <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+                <div class="container carousel-inner text-center text-white testimonial-carousel ">
                   <div class="carousel-item active">
                     <h5>Sarah</h5>
                     <p style="color:white" class="s1">"Not only are the pieces completely unique and always a focal point at wedding receptions, but the team at Lux Dream are the absolute best to work with. They always deliver and pick up promptly on the day of the event. Emma helps immensely with pre-planning leading up to the event. She’s prompt at making revisions to orders and sending over invoices efficiently."
