--- a/src/app/fcomponents/basic/footer/footer.component.html
+++ b/src/app/fcomponents/basic/footer/footer.component.html
@@ -14,9 +14,9 @@
     </div>
       <!-- imgs -->
     <div class="row mx-0 mx-md-5">
-      <div class="col-12 col-sm-4"><img  class ="imgBlocks" src="../../../../assets/images/footimg1.jpg" alt=""></div>
-      <div class="col-12 col-sm-4"><img  class ="imgBlocks" src="../../../../assets/images/footimg2.jpg" alt=""></div>
-      <div class="col-12 col-sm-4"><img  class ="imgBlocks" src="../../../../assets/images/footimg3.jpg" alt=""></div>
+      <div class="col-12 col-sm-4"><img  class ="imgBlocks" src="../../../../assets/images/footimg1.jpg" alt=""></div> <br>
+      <div class="col-12 col-sm-4"><img  class ="imgBlocks" src="../../../../assets/images/footimg2.jpg" alt=""></div> <br>
+      <div class="col-12 col-sm-4"><img  class ="imgBlocks" src="../../../../assets/images/footimg3.jpg" alt=""></div> <br>
       <!-- <div class="col-6 col-md-3"><img  class ="imgBlocks" src="../../../../assets/images/productImg2.jpeg" alt=""></div> -->
     </div>
 
