--- a/src/app/fcomponents/products/productList/productList.component.css
+++ b/src/app/fcomponents/products/productList/productList.component.css
@@ -1,10 +1,10 @@
-.productsBackImg{
+/* .productsBackImg{
     background-image: url("https://www.thebigletterco.com.au/wp-content/uploads/2013/05/products-banner-page.jpg"); 
     background-repeat: no-repeat;
     background-size: cover;
-    /* background-position: 50% -290px; */
+    background-position: 50% -290px;
     background-position: center center;
-}
+} */
 a{
     text-decoration: none;
     color: inherit;
