--- a/src/app/fcomponents/admin/admin.component.html
+++ b/src/app/fcomponents/admin/admin.component.html
@@ -4,68 +4,167 @@
         <div class="sidebar-sticky">
           <ul class="nav flex-column">
             <li class="nav-item">
-              <a class="nav-link active" href="#">
+              <a class="nav-link active" id="1" (click)="changeBoard($event)">
                 <i class="fas fa-user-cog"></i>
                 Dashboard <span class="sr-only">(current)</span>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">
+              <a class="nav-link" id="2" (click)="changeBoard($event)">
                 <i class="fas fa-shopping-bag"></i>
                 Hires
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">
+              <a class="nav-link" id="3" (click)="changeBoard($event)">
                 <i class="fas fa-gift"></i>
                 Packages
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">
+              <a class="nav-link" id="4" (click)="changeBoard($event)">
                 <i class="fas fa-briefcase"></i>
                 Services
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">
+              <a class="nav-link" id="5" (click)="changeBoard($event)">
                 <i class="fas fa-folder-open"></i>
                 Gallery
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">
+              <a class="nav-link" id="6" (click)="changeBoard($event)">
                 <i class="far fa-question-circle"></i>
                 Faq
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">
+              <a class="nav-link" id="7" (click)="changeBoard($event)">
                 <i class="fas fa-shipping-fast"></i>
                 Carts
               </a>
             </li>
           </ul>
-
         </div>
       </nav>
   
-      <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4"><div class="chartjs-size-monitor" style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; pointer-events: none; visibility: hidden; z-index: -1;"><div class="chartjs-size-monitor-expand" style="position:absolute;left:0;top:0;right:0;bottom:0;overflow:hidden;pointer-events:none;visibility:hidden;z-index:-1;"><div style="position:absolute;width:1000000px;height:1000000px;left:0;top:0"></div></div><div class="chartjs-size-monitor-shrink" style="position:absolute;left:0;top:0;right:0;bottom:0;overflow:hidden;pointer-events:none;visibility:hidden;z-index:-1;"><div style="position:absolute;width:200%;height:200%;left:0; top:0"></div></div></div>
-        <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-          <h1 class="h2">Dashboard</h1>
-          <div class="btn-toolbar mb-2 mb-md-0">
-            <div class="btn-group mr-2">
-              <button type="button" class="btn btn-sm btn-outline-secondary">Share</button>
-              <button type="button" class="btn btn-sm btn-outline-secondary">Export</button>
-            </div>
-            <button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle">
-              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-calendar"><rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect><line x1="16" y1="2" x2="16" y2="6"></line><line x1="8" y1="2" x2="8" y2="6"></line><line x1="3" y1="10" x2="21" y2="10"></line></svg>
-              This week
-            </button>
-          </div>
+      <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
+        <!-- Dashboard -->
+        <div *ngIf="blockCode == 1">
+          This is Dashboard
         </div>
-  
-        <canvas class="my-4 w-100 chartjs-render-monitor" id="myChart" width="1522" height="642" style="display: block; height: 514px; width: 1218px;"></canvas>
+
+        <!-- Hire || Service || Package-->
+        <div *ngIf="blockCode == 2 || blockCode == 3 || blockCode == 4">
+          <div *ngIf="blockCode == 2"><h2>Hires</h2></div>
+          <div *ngIf="blockCode == 3"><h2>Services</h2></div>
+          <div *ngIf="blockCode == 4"><h2>Packages</h2></div>
+          <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">#</th><th scope="col">Title</th><th scope="col">Subtitle</th><th scope="col" *ngIf="blockCode == 2">Category</th>
+                <th scope="col">totalStock</th><th scope="col">Description</th>
+              </tr>
+            </thead>
+            <tbody *ngIf="displayData">
+              <tr *ngFor="let data of displayData">
+                <th scope="row">{{data.prodId}}</th><td>{{data.title}}</td><td>{{data.subTitle}}</td><td *ngIf="blockCode == 2">{{data.category.categoryName}}</td>
+                <td>{{data.totalStock}}</td><td>{{data.description}}</td>
+              </tr>
+              </tbody>
+            </table>
+        </div>
+
+        <!-- Gallery -->
+        <div *ngIf="blockCode == 5">
+            <table class="table">
+              <thead>
+                <tr>
+                  <th scope="col">Id</th><th scope="col">Customer</th><th scope="col">Event Type</th>
+                  <th scope="col">Description</th>
+                </tr>
+              </thead>
+              <tbody *ngIf="displayData">
+                <tr *ngFor="let data of displayData">
+                  <th scope="row">{{data.prodjectId}}</th><td>{{data.title}}</td><td>{{data.customerName}}</td><td>{{data.eventtype.eventName}}</td>
+                  <td>{{data.description}}</td>
+                </tr>
+                </tbody>
+              </table>
+        </div>
+
+        <!-- Faq -->
+        <div *ngIf="blockCode == 6">
+          <h2>Faq</h2>
+          <table class="table">
+              <thead>
+                <tr>
+                  <th scope="col">Id</th><th scope="col">Question</th><th scope="col">Answer</th>
+                </tr>
+              </thead>
+              <tbody *ngIf="displayData">
+                <tr *ngFor="let data of displayData">
+                  <th scope="row">{{data.id}}</th><td>{{data.question}}</td><td>{{data.answer}}</td>
+                </tr>
+                </tbody>
+              </table>
+        </div>
+
+        <!-- Cart -->
+        <div *ngIf="blockCode == 7">
+          <h2>Carts</h2>
+          <table class="table">
+              <thead>
+                <tr>
+                  <th scope="col">Id</th><th scope="col">CartProds</th><th scope="col">Contact</th> <th scope="col">CreateTime</th>
+                  <th scope="col">Location</th><th>Price</th><th>UpdateTime</th>
+                </tr>
+              </thead>
+              <tbody *ngIf="displayData">
+                <tr *ngFor="let data of displayData">
+                  <th scope="row">{{data.cartId}}</th>
+                  <td>
+                    <div class="dropdown">
+                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                          View Products
+                        </button>
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                          <div *ngFor="let cart of data.cartProd">
+                              <div class="dropdown-item">
+                                <b>Title:</b>{{cart.title}} 
+                                <b>Subtitle:</b>{{cart.subtitle}}
+                                <b>Price:</b>{{cart.price}}
+                                <b>Quantity:</b>{{cart.quantity}}
+                              </div>
+                          </div>
+                          <a class="dropdown-item" *ngIf="data.cartProd.length==0">Empty</a>
+                        </div>
+                      </div>
+                  </td>
+                  
+                  <td>
+                      <div class="dropdown">
+                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                          View Contact
+                         </button>
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <div class="dropdown-item" *ngIf="data.contact">
+                                <b>Firstname:</b>{{data.contact.firstName}} 
+                                <b>Lastname:</b>{{data.contact.lastName}}
+                                <b>Phone Number:</b>{{data.contact.phoneNum}}
+                                <b>Email:</b>{{data.contact.email}}
+                              </div>
+                           </div>
+                        </div>
+                  </td>
+                  
+                  <td>{{data.createOn | date:'medium'}}</td>
+                  <td>{{data.location}}</td><td>{{data.price}}</td><td>{{data.updateOn | date:'medium'}}</td>
+                </tr>
+                </tbody>
+              </table>
+        </div>
       </main>
     </div>
   </div>
