--- a/src/app/fcomponents/products/productList/productList.component.html
+++ b/src/app/fcomponents/products/productList/productList.component.html
@@ -33,7 +33,7 @@
             <div class="carousel-inner" >
                 <!-- active -->
               <div class="carousel-item active " *ngFor="let media of product.productMedia">
-                <img src="../../../../assets/Products/{{media.url}}.jpg" class="d-block w-100 h480" style="height:100%;width:100%"/>
+                <img src="../../../../assets/Products/{{media.url}}.jpg" class="d-block w-100 h480"/>
               </div>
               <!-- <div class="carousel-item">
                 <img src="../../../../assets/images/productImg2.jpeg" class="d-block w-100">
