--- a/src/app/fcomponents/basic/navbar/navbar.component.html
+++ b/src/app/fcomponents/basic/navbar/navbar.component.html
@@ -2,13 +2,16 @@
     
     <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item pl-md-5">
+            <li class="nav-item pl-md-3">
+                    <a class="nav-link s2bold" routerLink='/' routerLinkActive="active"><h1 class="s2bold">Home</h1></a>
+            </li>
+            <li class="nav-item pl-md-3">
                 <a class="nav-link s2bold" routerLink='/hire' routerLinkActive="active"><h1 class="s2bold">Hire</h1></a>
             </li>
-            <li class="nav-item pl-md-5">
+            <li class="nav-item pl-md-3">
                 <a class="nav-link s2bold" routerLink='/services' routerLinkActive="active"><h1 class="s2bold">Party Services</h1></a>
             </li>
-            <li class="nav-item pl-md-5">
+            <li class="nav-item pl-md-3">
                 <a class="nav-link " routerLink='/packages' routerLinkActive="active"><h1 class="s2bold">Party Packages</h1></a>
             </li>
         </ul>
