--- a/src/app/fcomponents/gallery-list/gallery-list.component.html
+++ b/src/app/fcomponents/gallery-list/gallery-list.component.html
@@ -6,14 +6,15 @@
   </div>
   
     <!-- Gallery List -->
-  <div class="row j1">
+  <div class="row j1" >
     <div class="col-12 col-md-6 pb-30"><a routerLink="/galleries/Weddings"><div class="gallaryBlocks"  style="background-image:url('../../../assets/gallery/gallery1.jpg');">Weddings</div></a></div>
-    <div class="col-12 col-md-6 pb-30"><a routerLink="/galleries/Birthday"><div class="gallaryBlocks"  style="background-image:url('../../../assets/gallery/gallery2.jpg');">Birthday Party</div></a></div>
-  </div>
+    <div class="col-12 col-md-6 pb-30"><a style="color:white " routerLink="/galleries/Birthday"><div class="gallaryBlocks"  style="background-image:url('../../../assets/gallery/gallery2.jpg');">Birthday Party</div></a></div>
 
-  <div class="row j1">
-      <div class="col-12 col-md-6 pb-30"><a routerLink="/galleries/Girls Night"><div class="gallaryBlocks" style="background-image:url('../../../assets/gallery/gallery3.jpg');">Girls Night</div></a></div>
-      <div class="col-12 col-md-6 pb-30"><a routerLink="/galleries/Corporate Event"><div class="gallaryBlocks" style="background-image:url('../../../assets/gallery/gallery4.jpg');">Corporate Event</div></a></div>
+    <div class="col-12 col-md-6 pb-30"><a routerLink="/galleries/Girls Night"><div class="gallaryBlocks" style="background-image:url('../../../assets/gallery/gallery3.jpg');">Girls Night</div></a></div>
+    <div class="col-12 col-md-6 pb-30"><a routerLink="/galleries/Corporate Event"><div class="gallaryBlocks" style="background-image:url('../../../assets/gallery/gallery4.jpg');">Corporate Event</div></a></div>
+    <div class="col-12 col-md-6 pb-30"><a routerLink="/galleries/Baby Shower"><div class="gallaryBlocks" style="background-image:url('../../../assets/gallery/babyshower.jpg');">Baby Shower</div></a></div>
+    <div class="col-12 col-md-6 pb-30"><a routerLink="/galleries/Luxe Dream Floral Studio"><div class="gallaryBlocks" style="background-image:url('../../../assets/gallery/flower.jpg');">Floral Studio</div></a></div>
+
   </div>
   </div>
 </div>
