--- a/src/app/fcomponents/basic/navbar/navbar.component.css
+++ b/src/app/fcomponents/basic/navbar/navbar.component.css
@@ -1,11 +1,3 @@
-.navbar{
-    /* height:190px; */
-}
-@media only screen and (max-width: 767px) {
-    .navbar{
-        /* min-height:100px; */
-    }
-  }
 .navbar-light .navbar-nav .nav-link.active
 {
     color: #c48f45 !important;
@@ -14,9 +6,7 @@ a.nav-link:hover
 {
     color: #c48f45 !important;
 }
-/* .nav-item a {
-    letter-spacing: 2px;
-} */
+
 .navbar-collapse{
     padding-left:20px;
 }
@@ -26,5 +16,13 @@ a.nav-link:hover
     z-index: 99;
     top:28px;
     right:10px;
-
+}
+.dropdown-toggle::after{
+    display: none;
+}
+.dropdown-toggle{
+    cursor: pointer;
+}
+.dropdown-item{
+    cursor: pointer;
 }
