--- a/src/app/fcomponents/products/productList/productList.component.html
+++ b/src/app/fcomponents/products/productList/productList.component.html
@@ -9,15 +9,16 @@
     </div>
 
     <!-- categories and search -->
-    <div *ngIf="typeName == 'hire'" class="row justify-content-center">
+    <div *ngIf="typeName == 'hire' || typeName == 'category'" class="row justify-content-center">
         <div class="s1 border-bottom" style="padding:6px 0;">Categories:</div>
         <div class="col-8 col-md-4 p-0 border-bottom">
           <div class="dropdown">
             <button class="btn btn-secondary dropdown-toggle w-100 text-left s1" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               {{selectedCate}}</button>
             <div class="dropdown-menu w-100 text-left s1" aria-labelledby="dropdownMenuButton">
-                <a class="dropdown-item" (click)="ngOnInit()">All Products</a>
-              <div *ngFor="let category of allCategories"> <a class="dropdown-item" (click)="changeCate(category.categoryId,$event)">{{category.categoryName}}</a> </div>
+                <a class="dropdown-item" [routerLink]="[ '/hire']">All Products</a>
+              <!-- <div *ngFor="let category of allCategories"> <a class="dropdown-item" (click)="changeCate(category.categoryId,$event)">{{category.categoryName}}</a></div> -->
+              <div *ngFor="let category of allCategories"> <a class="dropdown-item" [routerLink]="[ '/category/', category.categoryId ]">{{category.categoryName}}</a> </div>
             </div>
           </div>
         </div>
