--- a/src/app/fcomponents/shopping_cart/shopping_cart.component.css
+++ b/src/app/fcomponents/shopping_cart/shopping_cart.component.css
@@ -1,21 +1,72 @@
-img{
-    width:100%;
+img {
+  width: 100%;
 }
-.bg-gray{
-    background-color: rgb(245, 243, 243)
+
+.bg-gray {
+  background-color: rgb(245, 243, 243)
 }
-a{
-    text-decoration: none;
-    color: inherit;
+
+a {
+  text-decoration: none;
+  color: inherit;
 }
-a:hover{
-    color: inherit;
+
+a:hover {
+  color: inherit;
 }
-.cartProdHeight{
-    height: 150px;
+
+.cartProdHeight {
+  height: 150px;
 }
-@media (max-width:767px){
-    .cartProdHeight{
-        height: 120px;
-    }
+.shoppingcarttop{
+    padding-bottom: 5px;
+    border-bottom: 1px solid #e0e0e0;
+}
+.cartdetil{
+    margin-bottom: 5px; 
+    padding-bottom: 5px;
+    border-bottom: 1px dashed #e0e0e0;
+}
+
+@media (max-width:767px) {
+  .cartProdHeight {
+    height: 120px;
+  }
+
+  .col-6 p {
+    margin: 0;
+  }
+
+  .cartdelete {
+    float: left;
+    margin-left: 5px;
+    margin-right: 20px;
+  }
+
+  .cartviewdetail {
+    float: left;
+  }
+
+  .btn.btn-outline-red {
+    padding:0 5px; 
+    font-weight: 500;
+    border-radius: 5.5px;
+    border-width: 1px;
+    border-color: #ff7575;
+    border-style: solid;
+    color: #ff7575;
+    font-size: 12px;
+  }
+
+  .btn.btn-outline-blue {
+    padding:0 5px; 
+    font-weight: 500;
+    border-radius: 5.5px;
+    border-width: 1px;
+    border-color: #c48f45;
+    border-style: solid;
+    color: #c48f45;
+    font-size: 12px;
+  }
+
 }
