--- a/src/app/fcomponents/basic/navbar/navbar.component.css
+++ b/src/app/fcomponents/basic/navbar/navbar.component.css
@@ -34,7 +34,7 @@ a{
     top: 30px;
     left: -4px;
 }
-/* @media (min-width: 768px) {
+@media (min-width: 768px) {
     .dropdown-menu li:hover .sub-menu {
         visibility: visible;
     }
@@ -43,4 +43,4 @@ a{
      .dropdown:hover .dropdown-menu {
          display: block;
     }
-} */
+}
