--- a/src/app/fcomponents/basic/navbar/navbar.component.html
+++ b/src/app/fcomponents/basic/navbar/navbar.component.html
@@ -11,9 +11,15 @@
                     <h1 class="s2bold">Hire</h1>
                 </div>
                 <div class="dropdown-menu dropdown-menu-left" aria-labelledby="navbarDropdownMenuLink">
+                    <!-- !large screen dropdown -->
+                    <a class="dropdown-item s2 d-none d-md-block" [routerLink]="[ '/hire' ]"> All Products</a>
                     <a class="dropdown-item s2 d-none d-md-block" *ngFor="let category of allCategories" [routerLink]="[ '/category/', category.categoryId ]">{{category.categoryName}}</a>
+                    <!-- !mobile dropdown -->
+                    <a class="dropdown-item s2 d-block d-md-none" data-toggle="collapse" data-target=".navbar-collapse"> 
+                        <a [routerLink]="[ '/hire' ]">All Products</a>
+                    </a>
                     <a class="dropdown-item s2 d-block d-md-none" *ngFor="let category of allCategories" data-toggle="collapse" data-target=".navbar-collapse"> 
-                        <a [routerLink]="[ '/category/', category.categoryId ]">{{category.categoryName}}</a>
+                        <a class="s2" [routerLink]="[ '/category/', category.categoryId ]">{{category.categoryName}}</a>
                     </a>
                 </div>
                 <!-- <div class="dropdown-menu dropdown-menu-left" aria-labelledby="navbarDropdownMenuLink">
