--- a/src/app/fcomponents/pages/homepage/homepage.component.css
+++ b/src/app/fcomponents/pages/homepage/homepage.component.css
@@ -57,3 +57,16 @@ ul li{
         height:370px;
     }
 }
+
+.carousel-control-next-icon
+{
+  content: '>';
+  font-size: 55px;
+  color: red;
+}
+
+.carousel-control-prev-icon {
+  content: '<';
+  font-size: 55px;
+  color: red;
+}
