--- a/src/app/fcomponents/basic/footer/footer.component.html
+++ b/src/app/fcomponents/basic/footer/footer.component.html
@@ -12,29 +12,36 @@
         </div>
       </div>
     </div>
-      <!-- imgs -->
+    <!-- imgs -->
     <div class="row mx-0 mx-md-5">
-      <div class="col-12 col-sm-4"><img  class ="imgBlocks" src="../../../../assets/images/footimg1.jpg" alt=""></div> <br>
-      <div class="col-12 col-sm-4"><img  class ="imgBlocks" src="../../../../assets/images/footimg2.jpg" alt=""></div> <br>
-      <div class="col-12 col-sm-4"><img  class ="imgBlocks" src="../../../../assets/images/footimg3.jpg" alt=""></div> <br>
+      <div class="col-12 col-sm-4"><img class="imgBlocks" src="../../../../assets/images/footimg1.jpg" alt=""></div>
+      <br>
+      <div class="col-12 col-sm-4"><img class="imgBlocks" src="../../../../assets/images/footimg2.jpg" alt=""></div>
+      <br>
+      <div class="col-12 col-sm-4"><img class="imgBlocks" src="../../../../assets/images/footimg3.jpg" alt=""></div>
+      <br>
       <!-- <div class="col-6 col-md-3"><img  class ="imgBlocks" src="../../../../assets/images/productImg2.jpeg" alt=""></div> -->
     </div>
 
-      <!-- lists -->
+    <!-- lists -->
     <div class="row mt-2 mt-md-5 contactUs mx-2 mx-md-5">
       <div class="col-12 col-sm-6 col-lg-4 s2bold pl-md-3">
         <ul> <span class="s1 text-white">Lux Dream Event Hire</span>
-          <li class="mt-md-2 pt-2 text-decoration-underline text-white-50"><a [routerLink]="['/aboutUs']">About us</a></li>
+          <li class="mt-md-2 pt-2 text-decoration-underline text-white-50"><a [routerLink]="['/aboutUs']">About us</a>
+          </li>
           <li class="mt-2 text-decoration-underline text-white-50"> <a [routerLink]="[ '/contactUs']">Contact</a> </li>
           <li class="mt-2 text-decoration-underline text-white-50"><a [routerLink]="[ '/faq']">FAQ</a></li>
-          <li class="mt-2 text-decoration-underline text-white-50"><a [routerLink]="[ '/shoppingCart']">Shopping Cart</a></li>
-        </ul> 
-       </div>
+          <li class="mt-2 text-decoration-underline text-white-50"><a [routerLink]="[ '/shoppingCart']">Shopping
+              Cart</a></li>
+        </ul>
+      </div>
       <div class="col-12 col-sm-6 col-lg-4 s2bold pl-md-3">
         <ul><span class="s1  text-white">Our Services</span>
           <li class="mt-md-2 pt-2 text-decoration-underline text-white-50"><a [routerLink]="[ '/hire']">Hire</a></li>
-          <li class="mt-2 text-decoration-underline text-white-50"><a [routerLink]="[ '/services']">Event services</a></li>
-          <li class="mt-2 text-decoration-underline text-white-50"><a [routerLink]="[ '/packages']">Event packages</a></li>
+          <li class="mt-2 text-decoration-underline text-white-50"><a [routerLink]="[ '/services']">Event services</a>
+          </li>
+          <li class="mt-2 text-decoration-underline text-white-50"><a [routerLink]="[ '/packages']">Event packages</a>
+          </li>
         </ul>
       </div>
       <div class="col-12 col-sm-6 col-lg-4 s2bold pl-md-3">
@@ -43,21 +50,24 @@
             <a href="tel:642108547654" style=""><i class="fas fa-phone-volume mr-3"></i> &nbsp; (64)2108547654</a>
           </li>
           <li class="mt-md-2 pt-2 text-decoration-underline text-white-50">
-            <a href="mailto:luxedreameventhire@gmail.com" style=""><i class="far fa-envelope mr-3"></i> &nbsp; luxedreameventhire@gmail.com</a>
+            <a href="mailto:luxedreameventhire@gmail.com" style=""><i class="far fa-envelope mr-3"></i> &nbsp;
+              luxedreameventhire@gmail.com</a>
           </li>
           <li class="mt-md-2 pt-2 text-decoration-underline text-white-50">
-            <a href="email:luxedreameventhire@gmail.com" style=""><i class="fas fa-map-marker-alt mr-3"></i> &nbsp; 19 Hillside Rd, Wairau Valley, Auckland 0627</a>
+            <a href="email:luxedreameventhire@gmail.com" style=""><i class="fas fa-map-marker-alt mr-3"></i> &nbsp; 19
+              Hillside Rd, Wairau Valley, Auckland 0627</a>
           </li>
           <li class="mt-md-2 pt-2 text-decoration-underline text-white-50">
-            <a href="email:luxedreameventhire@gmail.com" style=""><i class="fab fa-weixin mr-3"></i> &nbsp; Wechat: LuxeDreamEventHire</a>
+            <a href="email:luxedreameventhire@gmail.com" style=""><i class="fab fa-weixin mr-3"></i> &nbsp; Wechat:
+              LuxeDreamEventHire</a>
           </li>
         </ul>
       </div>
     </div>
     <!-- copyright -->
     <div class=" ">
-      <div class="s2gold text-center ">&copy; Luxe Dream Event Hire 2019</div> 
+      <div class="s2gold text-center ">&copy; Luxe Dream Event Hire 2019</div>
       <div class="s2 text-center">Built by Spiritx</div>
     </div>
-    
+
   </div>
