--- a/src/styles.css
+++ b/src/styles.css
@@ -93,7 +93,7 @@
 
 .m2 {
   font-family: 'Source Serif Pro', serif;
-  font-size: 23px;
+  font-size: 1.5rem;
   color: #525252;
   font-weight: 700;
   font-style: italic;
